# Clion_SDL2_Template

./: CMakeLists.txt  main.c
lib/: README.txt
